--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,6 +1,7 @@
 
 
 body {
+	background-color: rosybrown;
 	padding: 1vw;
 	font-family: 'Palatino','Palatino Linotype','Palatino LT STD','Book Antiqua','Georgia,serif';
 	line-height: 1.25;
