--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -116,7 +116,7 @@ p {
 }
 
 .intro h1:before {
-  content: "Dr. Shea\2019s Miraculous";
+  content: "Signe Elvira Elgh b. 1900";
   font-family: "refrigerator-deluxe",sans-serif;
   font-style: normal;
   text-transform: uppercase;
