--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -42,7 +42,7 @@ body:after {
   border-left: 7em solid #faf3e6;
   border-right: 7em solid #faf3e6;
   border-bottom: 10em solid transparent;
-  background: #ffb14d url('img/logos/img-halftone.png') repeat;
+  background: #ffb14d url('assets/img/logos/img-halftone.png') repeat;
   margin: -10em auto 0;
 }
 
