--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -138,7 +138,7 @@ p {
   margin-bottom: 0em;
   letter-spacing: 0.05rem;
   line-height: 1.275em;
-  background: url('img-bottle.png') no-repeat center 0.75em;
+  background: url('school.jpg') no-repeat center 0.75em;
   background-size: 1.45em;
 }
 
@@ -311,7 +311,7 @@ h3.archives, h3.resources {
 }
 
 .zen-resources {
-  background:  url('img-pointer-guy-sm.png') no-repeat 28% 95%;
+  background:  url('hairdresser.png') no-repeat 28% 95%;
   background-size: 5em;
   overflow: hidden;
 }
@@ -540,7 +540,7 @@ footer:after {
   width: 100%;
   height: 15em; 
   margin: 0 auto -13.5em;
-  background:  url('img-lookup.png') no-repeat center center;
+  background:  url('camera.png') no-repeat center center;
   background-size: 10em;
 }
 
@@ -652,7 +652,7 @@ footer a:hover, footer a:focus {
     margin-top: 0.85em;
     margin-bottom: 0em;
     line-height: 1.275em;
-    background: url('img-bottle.png') no-repeat center top;
+    background: url('hairdresser.png') no-repeat center top;
     background-size: 1.65em;
   }
   
@@ -705,7 +705,7 @@ footer a:hover, footer a:focus {
   }
   
   .zen-resources {
-    background:  url('img-pointer-guy.png') no-repeat 28% 95%;
+    background:  url('hairdresser.png') no-repeat 28% 95%;
   }
   
   .zen-resources:after {
@@ -730,7 +730,7 @@ footer a:hover, footer a:focus {
   }
   
   .zen-resources {
-    background:  url('img-pointer-guy.png') no-repeat 43.8% bottom;
+    background:  url('hairdresser.png') no-repeat 43.8% bottom;
     background-size: 13em;
   }
   
@@ -806,7 +806,7 @@ footer a:hover, footer a:focus {
     height: 25em; 
     margin: 0 auto -26em;
     padding-bottom: 2em;
-    background:  url('img-look-right.png') no-repeat center center;
+    background:  url('camera.png') no-repeat center center;
     background-size: 32%;
   }
   
@@ -828,7 +828,7 @@ footer a:hover, footer a:focus {
   }
   
   footer:after {
-    background:  url('img-lookup.png') no-repeat center bottom;
+    background:  url('schoobooks.png') no-repeat center bottom;
     background-size: 15em;
   }
   
