--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -34,7 +34,7 @@ body:before {
   border-left: 45px solid #faf3e6;
   border-right: 45px solid #faf3e6;
   border-top: 45px solid transparent;
-  background: #073763 url('img-halftone.png') repeat;
+  background: #073763 url('scissors.png') repeat;
   margin: 0 auto -45px;
 }
 
@@ -42,7 +42,7 @@ body:after {
   border-left: 7em solid #faf3e6;
   border-right: 7em solid #faf3e6;
   border-bottom: 10em solid transparent;
-  background: #ffb14d url('img-halftone.png') repeat;
+  background: #ffb14d url('scissors.png') repeat;
   margin: -10em auto 0;
 }
 
