--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -980,7 +980,7 @@ footer a:hover, footer a:focus {
     height: 26em; 
     margin: 0 auto -30.5em;
     padding-bottom: 6em;
-    background:  url('img-look-right.png') no-repeat center 40%;
+    background:  url('pocketcamera.png') no-repeat center 40%;
     background-size: 28%;
   }
   
