--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -1079,7 +1079,7 @@ footer a:hover, footer a:focus {
     height: 26em; 
     margin: 0 auto -26em;
     padding-bottom: 2em;
-    background:  url('img-look-right.png') no-repeat center center;
+    background:  url('longhair.png') no-repeat center center;
     background-size: 42%;
   }
 
