--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -138,7 +138,7 @@ p {
   margin-bottom: 0em;
   letter-spacing: 0.05rem;
   line-height: 1.275em;
-  background: url('pocketcamera.jpg') no-repeat center .75em;
+  background: url('pocketcamera.png') no-repeat center .75em;
   background-size: 15em;
 }
 
