--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -652,7 +652,7 @@ footer a:hover, footer a:focus {
     margin-top: 0.85em;
     margin-bottom: 0em;
     line-height: 1.275em;
-    background: url('school.jpg') no-repeat center top;
+    background: url('scissors.png') no-repeat center top;
     background-size: 24em;
   }
   
