--- a/docs/assets/css/apothecary.css
+++ b/docs/assets/css/apothecary.css
@@ -34,7 +34,7 @@ body:before {
   border-left: 45px solid #faf3e6;
   border-right: 45px solid #faf3e6;
   border-top: 45px solid transparent;
-  background: #073763 url('scissors.png') repeat;
+  background: #073763 url('pocketcamera.png') repeat;
   margin: 0 auto -45px;
 }
 
